// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlideShow click button to move page 1`] = `
<div
  className="test"
  style={
    Object {
      "backgroundColor": "transparent",
      "border": 0,
      "fontSize": "100%",
      "fontWeight": "bold",
      "lineHeight": "1px",
      "margin": 0,
      "outline": 0,
      "padding": 0,
      "position": "relative",
      "textDecoration": "none",
      "width": 100,
    }
  }
>
  <div
    className="test-wrapper"
    style={
      Object {
        "margin": "auto",
      }
    }
  >
    <ViewerComponent
      imgClassName="test-image"
      onClickNextButton={[Function]}
      onClickPrevButton={[Function]}
      src="static/test/page3"
      styles={
        Object {
          "ARROW_BUTTON": Object {
            "backgroundColor": "transparent",
            "height": 15,
            "width": 15,
          },
          "BAR": Object {
            "backgroundColor": "#323232",
            "height": 30,
            "lineHeight": "30px",
            "margin": "auto",
            "overflow": "auto",
            "position": "relative",
            "textAlign": "center",
            "width": "100%",
          },
          "BUTTON": Object {
            "backgroundColor": "transparent",
            "border": "none",
            "margin": "0 20px",
            "padding": 0,
          },
          "IMAGE": Object {
            "height": "100%",
            "overflow": "auto",
            "position": "relative",
            "width": "100%",
          },
          "NEXT_ON_CONTENT": Object {
            "cursor": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABmJLR0QAAAAAAAD5Q7t/AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH4QYREQ4zSp4iAgAAAapJREFUWMPt179rFEEUB/DPhUistFCLNGksFSxFURurpBNEMRZpFWwE/wHr+A+IjdgognZpLo0/QKy0UEklERMNQQXxMCDcMRa+lWPZ29xubq+6Lwyz+2bffL9v5s08lgkmqI+rWMcPvMJ1TI2L/Bx6SLn2YBzkLbwNwjsppYRF7ITtVNMCLgfRVuoD7ob9VpXJqu7ZYSzH8+3cWK/pyKfQjiifpxzwPsbmmxKwnC09ZnPkFwsSMt9+4SmOViXe30e+gzMF0X8YQkDWvg0SsYDNEsc/WEg1gTmsxlxPigRslhC/wOm0R4SIbDv+n+kMqUjVP78RXSCt1hw+h4CDxnl1Bvm9eG0XBlvUai51WS5970/CplbgdYEtO4Yn8bHpFVgL//NVVI9EAC6F7zZmRl0LhsHX6DfiCI9dwInoPw3z8XSB7Wz0L2sctdkoSvBoL+W4VTP6AziEL4Ou2zJsDEjEbow9xlK3210vScAr4fOsjvr5EhH52rCCaziWUkqdTuc+LkQCJtwYZVLtw3HcjLzo7SKwHT6N4QiW8BDv8BO/8SZETk/+WCaogr+r/hCMZ83IlAAAAABJRU5ErkJggg==\\"), auto",
            "display": "block",
            "height": "95%",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "40%",
          },
          "PAGE_VIEW": Object {
            "color": "#fff",
          },
          "PREV_ON_CONTENT": Object {
            "cursor": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABmJLR0QAAAAAAAD5Q7t/AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH4QYREQ4Xdp3G0wAAAZ9JREFUWMPt1z1rFFEUBuBnhEAaC1FBC1OlVKzFjyqNKY0oqGCddAHzAwS7/AELOwvBwlRpNCAhENMEC7UTFFc0xKRJMEQxXpsTWMad3ZnZ3WyzLxwuc+/ce957PmcYYojqOIYZrGIbn3D3KAk8RcrJAa4dhfLLoXAPd1JKCQ9j7i2yfhOYC2WPUxPwJeZv1/FnHfzNPT+KcR6n+mmBybjp+5QDlmPtZRcXM44F7LQItLzczBE4i++xNl9X+Y8Sig/lQwsrXMV+E4nRKgQWYuMrnEs1gSn8bkP8K663IrAbL4ylLhGWeNOGSONQaXPe7uB43L7Rq6jNssLSkOXTcCnGJ1mWjQ2ixo9jq53varqjSP4rRB9xKYJxtwXBtUF1v4mitOuFBcpgFJux6VY/XVCE/Wg28K0fHxdl8DnGi4OKg6kw2xbO1HTBlZDKLoAXYf6TONFNXerGCqvB/F6HG9/H86j5fzqV4ip4EJs3cKNJ4QVMYxG/SnTRRlEzKpOOrzscfoAVzOI8RnodjCNx+Dp+RgN7h2dh+tPDv5YhquIfvGpAec8aptcAAAAASUVORK5CYII=\\"), auto",
            "display": "block",
            "height": "95%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "40%",
          },
          "PROGRESS_BAR": Object {
            "backgroundColor": "#000",
            "height": 10,
            "marginTop": -6,
            "position": "relative",
            "width": "100%",
          },
          "ROOT": Object {
            "backgroundColor": "transparent",
            "border": 0,
            "fontSize": "100%",
            "fontWeight": "bold",
            "lineHeight": "1px",
            "margin": 0,
            "outline": 0,
            "padding": 0,
            "position": "relative",
            "textDecoration": "none",
            "width": 100,
          },
        }
      }
      timestamp={0}
    />
    <Preview
      images={
        Array [
          "static/test/page1",
          "static/test/page2",
          "static/test/page3",
        ]
      }
      imgClassName="test-image"
      isFullScreen={false}
      opacity={0}
      previewIndex={0}
    />
    <ProgressBarComponent
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      progress={100}
      style={
        Object {
          "backgroundColor": "#000",
          "height": 10,
          "marginTop": -6,
          "position": "relative",
          "width": "100%",
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#323232",
          "height": 30,
          "lineHeight": "30px",
          "margin": "auto",
          "overflow": "auto",
          "position": "relative",
          "textAlign": "center",
          "width": "100%",
        }
      }
    >
      <PagingButton
        onClick={[Function]}
      >
        <svg
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 15,
              "width": 15,
            }
          }
          viewBox="0 0 8 8"
        >
          <path
            d="M4 0l-4 3 4 3v-6zm0 3l4 3v-6l-4 3z"
            fill="#fff"
            transform="translate(0 1)"
          />
        </svg>
      </PagingButton>
      <span
        style={
          Object {
            "color": "#fff",
          }
        }
      >
        3 / 3
      </span>
      <PagingButton
        onClick={[Function]}
      >
        <svg
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 15,
              "width": 15,
            }
          }
          viewBox="0 0 8 8"
        >
          <path
            d="M0 0v6l4-3-4-3zm4 3v3l4-3-4-3v3z"
            fill="#fff"
            transform="translate(0 1)"
          />
        </svg>
      </PagingButton>
      <FullscreenButton
        onClick={[Function]}
      >
        <FullscreenIcon
          isFullScreen={false}
        />
      </FullscreenButton>
    </div>
  </div>
</div>
`;

exports[`SlideShow componentWillMount props.images is empty 1`] = `
<div
  className="test"
  style={
    Object {
      "backgroundColor": "transparent",
      "border": 0,
      "fontSize": "100%",
      "fontWeight": "bold",
      "lineHeight": "1px",
      "margin": 0,
      "outline": 0,
      "padding": 0,
      "position": "relative",
      "textDecoration": "none",
      "width": 100,
    }
  }
>
  <div
    className="test-wrapper"
    style={
      Object {
        "margin": "auto",
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "overflow": "auto",
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <img
        className="test-image"
        src=""
        style={
          Object {
            "width": "100%",
          }
        }
      />
      <div
        onClick={[Function]}
        style={
          Object {
            "cursor": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABmJLR0QAAAAAAAD5Q7t/AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH4QYREQ4Xdp3G0wAAAZ9JREFUWMPt1z1rFFEUBuBnhEAaC1FBC1OlVKzFjyqNKY0oqGCddAHzAwS7/AELOwvBwlRpNCAhENMEC7UTFFc0xKRJMEQxXpsTWMad3ZnZ3WyzLxwuc+/ce957PmcYYojqOIYZrGIbn3D3KAk8RcrJAa4dhfLLoXAPd1JKCQ9j7i2yfhOYC2WPUxPwJeZv1/FnHfzNPT+KcR6n+mmBybjp+5QDlmPtZRcXM44F7LQItLzczBE4i++xNl9X+Y8Sig/lQwsrXMV+E4nRKgQWYuMrnEs1gSn8bkP8K663IrAbL4ylLhGWeNOGSONQaXPe7uB43L7Rq6jNssLSkOXTcCnGJ1mWjQ2ixo9jq53varqjSP4rRB9xKYJxtwXBtUF1v4mitOuFBcpgFJux6VY/XVCE/Wg28K0fHxdl8DnGi4OKg6kw2xbO1HTBlZDKLoAXYf6TONFNXerGCqvB/F6HG9/H86j5fzqV4ip4EJs3cKNJ4QVMYxG/SnTRRlEzKpOOrzscfoAVzOI8RnodjCNx+Dp+RgN7h2dh+tPDv5YhquIfvGpAec8aptcAAAAASUVORK5CYII=\\"), auto",
            "display": "block",
            "height": "95%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "40%",
          }
        }
      />
      <div
        onClick={[Function]}
        style={
          Object {
            "cursor": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABmJLR0QAAAAAAAD5Q7t/AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH4QYREQ4zSp4iAgAAAapJREFUWMPt179rFEEUB/DPhUistFCLNGksFSxFURurpBNEMRZpFWwE/wHr+A+IjdgognZpLo0/QKy0UEklERMNQQXxMCDcMRa+lWPZ29xubq+6Lwyz+2bffL9v5s08lgkmqI+rWMcPvMJ1TI2L/Bx6SLn2YBzkLbwNwjsppYRF7ITtVNMCLgfRVuoD7ob9VpXJqu7ZYSzH8+3cWK/pyKfQjiifpxzwPsbmmxKwnC09ZnPkFwsSMt9+4SmOViXe30e+gzMF0X8YQkDWvg0SsYDNEsc/WEg1gTmsxlxPigRslhC/wOm0R4SIbDv+n+kMqUjVP78RXSCt1hw+h4CDxnl1Bvm9eG0XBlvUai51WS5970/CplbgdYEtO4Yn8bHpFVgL//NVVI9EAC6F7zZmRl0LhsHX6DfiCI9dwInoPw3z8XSB7Wz0L2sctdkoSvBoL+W4VTP6AziEL4Ou2zJsDEjEbow9xlK3210vScAr4fOsjvr5EhH52rCCaziWUkqdTuc+LkQCJtwYZVLtw3HcjLzo7SKwHT6N4QiW8BDv8BO/8SZETk/+WCaogr+r/hCMZ83IlAAAAABJRU5ErkJggg==\\"), auto",
            "display": "block",
            "height": "95%",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "40%",
          }
        }
      />
    </div>
    <div
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      style={
        Object {
          "backgroundColor": "#000",
          "height": 10,
          "marginTop": -6,
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#007bb6",
            "height": "100%",
            "width": "0%",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#323232",
          "height": 30,
          "lineHeight": "30px",
          "margin": "auto",
          "overflow": "auto",
          "position": "relative",
          "textAlign": "center",
          "width": "100%",
        }
      }
    >
      <button
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "margin": "0 20px",
            "padding": 0,
          }
        }
      >
        <svg
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 15,
              "width": 15,
            }
          }
          viewBox="0 0 8 8"
        >
          <path
            d="M4 0l-4 3 4 3v-6zm0 3l4 3v-6l-4 3z"
            fill="#fff"
            transform="translate(0 1)"
          />
        </svg>
      </button>
      <span
        style={
          Object {
            "color": "#fff",
          }
        }
      >
        1 / 0
      </span>
      <button
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "margin": "0 20px",
            "padding": 0,
          }
        }
      >
        <svg
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 15,
              "width": 15,
            }
          }
          viewBox="0 0 8 8"
        >
          <path
            d="M0 0v6l4-3-4-3zm4 3v3l4-3-4-3v3z"
            fill="#fff"
            transform="translate(0 1)"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`SlideShow mousemove on progress bar 1`] = `
<div
  className="test"
  style={
    Object {
      "backgroundColor": "transparent",
      "border": 0,
      "fontSize": "100%",
      "fontWeight": "bold",
      "lineHeight": "1px",
      "margin": 0,
      "outline": 0,
      "padding": 0,
      "position": "relative",
      "textDecoration": "none",
      "width": 500,
    }
  }
>
  <div
    className="test-wrapper"
    style={
      Object {
        "margin": "auto",
      }
    }
  >
    <ViewerComponent
      imgClassName="test-image"
      onClickNextButton={[Function]}
      onClickPrevButton={[Function]}
      src="static/test/page1"
      styles={
        Object {
          "ARROW_BUTTON": Object {
            "backgroundColor": "transparent",
            "height": 15,
            "width": 15,
          },
          "BAR": Object {
            "backgroundColor": "#323232",
            "height": 30,
            "lineHeight": "30px",
            "margin": "auto",
            "overflow": "auto",
            "position": "relative",
            "textAlign": "center",
            "width": "100%",
          },
          "BUTTON": Object {
            "backgroundColor": "transparent",
            "border": "none",
            "margin": "0 20px",
            "padding": 0,
          },
          "IMAGE": Object {
            "height": "100%",
            "overflow": "auto",
            "position": "relative",
            "width": "100%",
          },
          "NEXT_ON_CONTENT": Object {
            "cursor": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABmJLR0QAAAAAAAD5Q7t/AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH4QYREQ4zSp4iAgAAAapJREFUWMPt179rFEEUB/DPhUistFCLNGksFSxFURurpBNEMRZpFWwE/wHr+A+IjdgognZpLo0/QKy0UEklERMNQQXxMCDcMRa+lWPZ29xubq+6Lwyz+2bffL9v5s08lgkmqI+rWMcPvMJ1TI2L/Bx6SLn2YBzkLbwNwjsppYRF7ITtVNMCLgfRVuoD7ob9VpXJqu7ZYSzH8+3cWK/pyKfQjiifpxzwPsbmmxKwnC09ZnPkFwsSMt9+4SmOViXe30e+gzMF0X8YQkDWvg0SsYDNEsc/WEg1gTmsxlxPigRslhC/wOm0R4SIbDv+n+kMqUjVP78RXSCt1hw+h4CDxnl1Bvm9eG0XBlvUai51WS5970/CplbgdYEtO4Yn8bHpFVgL//NVVI9EAC6F7zZmRl0LhsHX6DfiCI9dwInoPw3z8XSB7Wz0L2sctdkoSvBoL+W4VTP6AziEL4Ou2zJsDEjEbow9xlK3210vScAr4fOsjvr5EhH52rCCaziWUkqdTuc+LkQCJtwYZVLtw3HcjLzo7SKwHT6N4QiW8BDv8BO/8SZETk/+WCaogr+r/hCMZ83IlAAAAABJRU5ErkJggg==\\"), auto",
            "display": "block",
            "height": "95%",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "40%",
          },
          "PAGE_VIEW": Object {
            "color": "#fff",
          },
          "PREV_ON_CONTENT": Object {
            "cursor": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABmJLR0QAAAAAAAD5Q7t/AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH4QYREQ4Xdp3G0wAAAZ9JREFUWMPt1z1rFFEUBuBnhEAaC1FBC1OlVKzFjyqNKY0oqGCddAHzAwS7/AELOwvBwlRpNCAhENMEC7UTFFc0xKRJMEQxXpsTWMad3ZnZ3WyzLxwuc+/ce957PmcYYojqOIYZrGIbn3D3KAk8RcrJAa4dhfLLoXAPd1JKCQ9j7i2yfhOYC2WPUxPwJeZv1/FnHfzNPT+KcR6n+mmBybjp+5QDlmPtZRcXM44F7LQItLzczBE4i++xNl9X+Y8Sig/lQwsrXMV+E4nRKgQWYuMrnEs1gSn8bkP8K663IrAbL4ylLhGWeNOGSONQaXPe7uB43L7Rq6jNssLSkOXTcCnGJ1mWjQ2ixo9jq53varqjSP4rRB9xKYJxtwXBtUF1v4mitOuFBcpgFJux6VY/XVCE/Wg28K0fHxdl8DnGi4OKg6kw2xbO1HTBlZDKLoAXYf6TONFNXerGCqvB/F6HG9/H86j5fzqV4ip4EJs3cKNJ4QVMYxG/SnTRRlEzKpOOrzscfoAVzOI8RnodjCNx+Dp+RgN7h2dh+tPDv5YhquIfvGpAec8aptcAAAAASUVORK5CYII=\\"), auto",
            "display": "block",
            "height": "95%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "40%",
          },
          "PROGRESS_BAR": Object {
            "backgroundColor": "#000",
            "height": 10,
            "marginTop": -6,
            "position": "relative",
            "width": "100%",
          },
          "ROOT": Object {
            "backgroundColor": "transparent",
            "border": 0,
            "fontSize": "100%",
            "fontWeight": "bold",
            "lineHeight": "1px",
            "margin": 0,
            "outline": 0,
            "padding": 0,
            "position": "relative",
            "textDecoration": "none",
            "width": 500,
          },
        }
      }
      timestamp={0}
    />
    <Preview
      images={
        Array [
          "static/test/page1",
          "static/test/page2",
          "static/test/page3",
        ]
      }
      imgClassName="test-image"
      isFullScreen={false}
      opacity={1}
      previewIndex={0}
    />
    <ProgressBarComponent
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      progress={34}
      style={
        Object {
          "backgroundColor": "#000",
          "height": 10,
          "marginTop": -6,
          "position": "relative",
          "width": "100%",
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#323232",
          "height": 30,
          "lineHeight": "30px",
          "margin": "auto",
          "overflow": "auto",
          "position": "relative",
          "textAlign": "center",
          "width": "100%",
        }
      }
    >
      <PagingButton
        onClick={[Function]}
      >
        <svg
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 15,
              "width": 15,
            }
          }
          viewBox="0 0 8 8"
        >
          <path
            d="M4 0l-4 3 4 3v-6zm0 3l4 3v-6l-4 3z"
            fill="#fff"
            transform="translate(0 1)"
          />
        </svg>
      </PagingButton>
      <span
        style={
          Object {
            "color": "#fff",
          }
        }
      >
        1 / 3
      </span>
      <PagingButton
        onClick={[Function]}
      >
        <svg
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 15,
              "width": 15,
            }
          }
          viewBox="0 0 8 8"
        >
          <path
            d="M0 0v6l4-3-4-3zm4 3v3l4-3-4-3v3z"
            fill="#fff"
            transform="translate(0 1)"
          />
        </svg>
      </PagingButton>
      <FullscreenButton
        onClick={[Function]}
      >
        <FullscreenIcon
          isFullScreen={false}
        />
      </FullscreenButton>
    </div>
  </div>
</div>
`;

exports[`SlideShow mousemove on progress bar2 1`] = `
<div
  className="test"
  style={
    Object {
      "backgroundColor": "transparent",
      "border": 0,
      "fontSize": "100%",
      "fontWeight": "bold",
      "lineHeight": "1px",
      "margin": 0,
      "outline": 0,
      "padding": 0,
      "position": "relative",
      "textDecoration": "none",
      "width": 500,
    }
  }
>
  <div
    className="test-wrapper"
    style={
      Object {
        "margin": "auto",
      }
    }
  >
    <ViewerComponent
      imgClassName="test-image"
      onClickNextButton={[Function]}
      onClickPrevButton={[Function]}
      src="static/test/page1"
      styles={
        Object {
          "ARROW_BUTTON": Object {
            "backgroundColor": "transparent",
            "height": 15,
            "width": 15,
          },
          "BAR": Object {
            "backgroundColor": "#323232",
            "height": 30,
            "lineHeight": "30px",
            "margin": "auto",
            "overflow": "auto",
            "position": "relative",
            "textAlign": "center",
            "width": "100%",
          },
          "BUTTON": Object {
            "backgroundColor": "transparent",
            "border": "none",
            "margin": "0 20px",
            "padding": 0,
          },
          "IMAGE": Object {
            "height": "100%",
            "overflow": "auto",
            "position": "relative",
            "width": "100%",
          },
          "NEXT_ON_CONTENT": Object {
            "cursor": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABmJLR0QAAAAAAAD5Q7t/AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH4QYREQ4zSp4iAgAAAapJREFUWMPt179rFEEUB/DPhUistFCLNGksFSxFURurpBNEMRZpFWwE/wHr+A+IjdgognZpLo0/QKy0UEklERMNQQXxMCDcMRa+lWPZ29xubq+6Lwyz+2bffL9v5s08lgkmqI+rWMcPvMJ1TI2L/Bx6SLn2YBzkLbwNwjsppYRF7ITtVNMCLgfRVuoD7ob9VpXJqu7ZYSzH8+3cWK/pyKfQjiifpxzwPsbmmxKwnC09ZnPkFwsSMt9+4SmOViXe30e+gzMF0X8YQkDWvg0SsYDNEsc/WEg1gTmsxlxPigRslhC/wOm0R4SIbDv+n+kMqUjVP78RXSCt1hw+h4CDxnl1Bvm9eG0XBlvUai51WS5970/CplbgdYEtO4Yn8bHpFVgL//NVVI9EAC6F7zZmRl0LhsHX6DfiCI9dwInoPw3z8XSB7Wz0L2sctdkoSvBoL+W4VTP6AziEL4Ou2zJsDEjEbow9xlK3210vScAr4fOsjvr5EhH52rCCaziWUkqdTuc+LkQCJtwYZVLtw3HcjLzo7SKwHT6N4QiW8BDv8BO/8SZETk/+WCaogr+r/hCMZ83IlAAAAABJRU5ErkJggg==\\"), auto",
            "display": "block",
            "height": "95%",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "40%",
          },
          "PAGE_VIEW": Object {
            "color": "#fff",
          },
          "PREV_ON_CONTENT": Object {
            "cursor": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABmJLR0QAAAAAAAD5Q7t/AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH4QYREQ4Xdp3G0wAAAZ9JREFUWMPt1z1rFFEUBuBnhEAaC1FBC1OlVKzFjyqNKY0oqGCddAHzAwS7/AELOwvBwlRpNCAhENMEC7UTFFc0xKRJMEQxXpsTWMad3ZnZ3WyzLxwuc+/ce957PmcYYojqOIYZrGIbn3D3KAk8RcrJAa4dhfLLoXAPd1JKCQ9j7i2yfhOYC2WPUxPwJeZv1/FnHfzNPT+KcR6n+mmBybjp+5QDlmPtZRcXM44F7LQItLzczBE4i++xNl9X+Y8Sig/lQwsrXMV+E4nRKgQWYuMrnEs1gSn8bkP8K663IrAbL4ylLhGWeNOGSONQaXPe7uB43L7Rq6jNssLSkOXTcCnGJ1mWjQ2ixo9jq53varqjSP4rRB9xKYJxtwXBtUF1v4mitOuFBcpgFJux6VY/XVCE/Wg28K0fHxdl8DnGi4OKg6kw2xbO1HTBlZDKLoAXYf6TONFNXerGCqvB/F6HG9/H86j5fzqV4ip4EJs3cKNJ4QVMYxG/SnTRRlEzKpOOrzscfoAVzOI8RnodjCNx+Dp+RgN7h2dh+tPDv5YhquIfvGpAec8aptcAAAAASUVORK5CYII=\\"), auto",
            "display": "block",
            "height": "95%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "40%",
          },
          "PROGRESS_BAR": Object {
            "backgroundColor": "#000",
            "height": 10,
            "marginTop": -6,
            "position": "relative",
            "width": "100%",
          },
          "ROOT": Object {
            "backgroundColor": "transparent",
            "border": 0,
            "fontSize": "100%",
            "fontWeight": "bold",
            "lineHeight": "1px",
            "margin": 0,
            "outline": 0,
            "padding": 0,
            "position": "relative",
            "textDecoration": "none",
            "width": 500,
          },
        }
      }
      timestamp={0}
    />
    <Preview
      images={
        Array [
          "static/test/page1",
          "static/test/page2",
          "static/test/page3",
        ]
      }
      imgClassName="test-image"
      isFullScreen={false}
      opacity={1}
      previewIndex={2}
    />
    <ProgressBarComponent
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      progress={34}
      style={
        Object {
          "backgroundColor": "#000",
          "height": 10,
          "marginTop": -6,
          "position": "relative",
          "width": "100%",
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#323232",
          "height": 30,
          "lineHeight": "30px",
          "margin": "auto",
          "overflow": "auto",
          "position": "relative",
          "textAlign": "center",
          "width": "100%",
        }
      }
    >
      <PagingButton
        onClick={[Function]}
      >
        <svg
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 15,
              "width": 15,
            }
          }
          viewBox="0 0 8 8"
        >
          <path
            d="M4 0l-4 3 4 3v-6zm0 3l4 3v-6l-4 3z"
            fill="#fff"
            transform="translate(0 1)"
          />
        </svg>
      </PagingButton>
      <span
        style={
          Object {
            "color": "#fff",
          }
        }
      >
        1 / 3
      </span>
      <PagingButton
        onClick={[Function]}
      >
        <svg
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 15,
              "width": 15,
            }
          }
          viewBox="0 0 8 8"
        >
          <path
            d="M0 0v6l4-3-4-3zm4 3v3l4-3-4-3v3z"
            fill="#fff"
            transform="translate(0 1)"
          />
        </svg>
      </PagingButton>
      <FullscreenButton
        onClick={[Function]}
      >
        <FullscreenIcon
          isFullScreen={false}
        />
      </FullscreenButton>
    </div>
  </div>
</div>
`;

exports[`SlideShow props images 1`] = `
<div
  className="test"
  style={
    Object {
      "backgroundColor": "transparent",
      "border": 0,
      "fontSize": "100%",
      "fontWeight": "bold",
      "lineHeight": "1px",
      "margin": 0,
      "outline": 0,
      "padding": 0,
      "position": "relative",
      "textDecoration": "none",
      "width": 100,
    }
  }
>
  <div
    className="test-wrapper"
    style={
      Object {
        "margin": "auto",
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "overflow": "auto",
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <img
        className="test-image"
        src="static/test/page1"
        style={
          Object {
            "width": "100%",
          }
        }
      />
      <div
        onClick={[Function]}
        style={
          Object {
            "cursor": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABmJLR0QAAAAAAAD5Q7t/AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH4QYREQ4Xdp3G0wAAAZ9JREFUWMPt1z1rFFEUBuBnhEAaC1FBC1OlVKzFjyqNKY0oqGCddAHzAwS7/AELOwvBwlRpNCAhENMEC7UTFFc0xKRJMEQxXpsTWMad3ZnZ3WyzLxwuc+/ce957PmcYYojqOIYZrGIbn3D3KAk8RcrJAa4dhfLLoXAPd1JKCQ9j7i2yfhOYC2WPUxPwJeZv1/FnHfzNPT+KcR6n+mmBybjp+5QDlmPtZRcXM44F7LQItLzczBE4i++xNl9X+Y8Sig/lQwsrXMV+E4nRKgQWYuMrnEs1gSn8bkP8K663IrAbL4ylLhGWeNOGSONQaXPe7uB43L7Rq6jNssLSkOXTcCnGJ1mWjQ2ixo9jq53varqjSP4rRB9xKYJxtwXBtUF1v4mitOuFBcpgFJux6VY/XVCE/Wg28K0fHxdl8DnGi4OKg6kw2xbO1HTBlZDKLoAXYf6TONFNXerGCqvB/F6HG9/H86j5fzqV4ip4EJs3cKNJ4QVMYxG/SnTRRlEzKpOOrzscfoAVzOI8RnodjCNx+Dp+RgN7h2dh+tPDv5YhquIfvGpAec8aptcAAAAASUVORK5CYII=\\"), auto",
            "display": "block",
            "height": "95%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "40%",
          }
        }
      />
      <div
        onClick={[Function]}
        style={
          Object {
            "cursor": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABmJLR0QAAAAAAAD5Q7t/AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH4QYREQ4zSp4iAgAAAapJREFUWMPt179rFEEUB/DPhUistFCLNGksFSxFURurpBNEMRZpFWwE/wHr+A+IjdgognZpLo0/QKy0UEklERMNQQXxMCDcMRa+lWPZ29xubq+6Lwyz+2bffL9v5s08lgkmqI+rWMcPvMJ1TI2L/Bx6SLn2YBzkLbwNwjsppYRF7ITtVNMCLgfRVuoD7ob9VpXJqu7ZYSzH8+3cWK/pyKfQjiifpxzwPsbmmxKwnC09ZnPkFwsSMt9+4SmOViXe30e+gzMF0X8YQkDWvg0SsYDNEsc/WEg1gTmsxlxPigRslhC/wOm0R4SIbDv+n+kMqUjVP78RXSCt1hw+h4CDxnl1Bvm9eG0XBlvUai51WS5970/CplbgdYEtO4Yn8bHpFVgL//NVVI9EAC6F7zZmRl0LhsHX6DfiCI9dwInoPw3z8XSB7Wz0L2sctdkoSvBoL+W4VTP6AziEL4Ou2zJsDEjEbow9xlK3210vScAr4fOsjvr5EhH52rCCaziWUkqdTuc+LkQCJtwYZVLtw3HcjLzo7SKwHT6N4QiW8BDv8BO/8SZETk/+WCaogr+r/hCMZ83IlAAAAABJRU5ErkJggg==\\"), auto",
            "display": "block",
            "height": "95%",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "40%",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#323232",
          "border": "3px solid #323232",
          "borderRadius": "3px",
          "bottom": 50,
          "color": "#fff",
          "left": "50%",
          "marginLeft": -100,
          "opacity": 0,
          "position": "absolute",
          "zIndex": 1,
        }
      }
    >
      <img
        className="preview-0"
        src="static/test/page1"
        style={
          Object {
            "display": "inline",
            "width": 200,
          }
        }
      />
      <img
        className="preview-1"
        src="static/test/page2"
        style={
          Object {
            "display": "none",
            "width": 200,
          }
        }
      />
      <img
        className="preview-2"
        src="static/test/page3"
        style={
          Object {
            "display": "none",
            "width": 200,
          }
        }
      />
      <p
        style={
          Object {
            "fontSize": 4,
            "margin": 0,
            "textAlign": "center",
          }
        }
      >
        1 / 3
      </p>
    </div>
    <div
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      style={
        Object {
          "backgroundColor": "#000",
          "height": 10,
          "marginTop": -6,
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#007bb6",
            "height": "100%",
            "width": "34%",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#323232",
          "height": 30,
          "lineHeight": "30px",
          "margin": "auto",
          "overflow": "auto",
          "position": "relative",
          "textAlign": "center",
          "width": "100%",
        }
      }
    >
      <button
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "margin": "0 20px",
            "padding": 0,
          }
        }
      >
        <svg
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 15,
              "width": 15,
            }
          }
          viewBox="0 0 8 8"
        >
          <path
            d="M4 0l-4 3 4 3v-6zm0 3l4 3v-6l-4 3z"
            fill="#fff"
            transform="translate(0 1)"
          />
        </svg>
      </button>
      <span
        style={
          Object {
            "color": "#fff",
          }
        }
      >
        1 / 3
      </span>
      <button
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "margin": "0 20px",
            "padding": 0,
          }
        }
      >
        <svg
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 15,
              "width": 15,
            }
          }
          viewBox="0 0 8 8"
        >
          <path
            d="M0 0v6l4-3-4-3zm4 3v3l4-3-4-3v3z"
            fill="#fff"
            transform="translate(0 1)"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`SlideShow props showFullscreenIcon is false 1`] = `
<div
  className="test"
  style={
    Object {
      "backgroundColor": "transparent",
      "border": 0,
      "fontSize": "100%",
      "fontWeight": "bold",
      "lineHeight": "1px",
      "margin": 0,
      "outline": 0,
      "padding": 0,
      "position": "relative",
      "textDecoration": "none",
      "width": 100,
    }
  }
>
  <div
    className="test-wrapper"
    style={
      Object {
        "margin": "auto",
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "overflow": "auto",
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <img
        className="test-image"
        src="static/test/page1"
        style={
          Object {
            "width": "100%",
          }
        }
      />
      <div
        onClick={[Function]}
        style={
          Object {
            "cursor": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABmJLR0QAAAAAAAD5Q7t/AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH4QYREQ4Xdp3G0wAAAZ9JREFUWMPt1z1rFFEUBuBnhEAaC1FBC1OlVKzFjyqNKY0oqGCddAHzAwS7/AELOwvBwlRpNCAhENMEC7UTFFc0xKRJMEQxXpsTWMad3ZnZ3WyzLxwuc+/ce957PmcYYojqOIYZrGIbn3D3KAk8RcrJAa4dhfLLoXAPd1JKCQ9j7i2yfhOYC2WPUxPwJeZv1/FnHfzNPT+KcR6n+mmBybjp+5QDlmPtZRcXM44F7LQItLzczBE4i++xNl9X+Y8Sig/lQwsrXMV+E4nRKgQWYuMrnEs1gSn8bkP8K663IrAbL4ylLhGWeNOGSONQaXPe7uB43L7Rq6jNssLSkOXTcCnGJ1mWjQ2ixo9jq53varqjSP4rRB9xKYJxtwXBtUF1v4mitOuFBcpgFJux6VY/XVCE/Wg28K0fHxdl8DnGi4OKg6kw2xbO1HTBlZDKLoAXYf6TONFNXerGCqvB/F6HG9/H86j5fzqV4ip4EJs3cKNJ4QVMYxG/SnTRRlEzKpOOrzscfoAVzOI8RnodjCNx+Dp+RgN7h2dh+tPDv5YhquIfvGpAec8aptcAAAAASUVORK5CYII=\\"), auto",
            "display": "block",
            "height": "95%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "40%",
          }
        }
      />
      <div
        onClick={[Function]}
        style={
          Object {
            "cursor": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABmJLR0QAAAAAAAD5Q7t/AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH4QYREQ4zSp4iAgAAAapJREFUWMPt179rFEEUB/DPhUistFCLNGksFSxFURurpBNEMRZpFWwE/wHr+A+IjdgognZpLo0/QKy0UEklERMNQQXxMCDcMRa+lWPZ29xubq+6Lwyz+2bffL9v5s08lgkmqI+rWMcPvMJ1TI2L/Bx6SLn2YBzkLbwNwjsppYRF7ITtVNMCLgfRVuoD7ob9VpXJqu7ZYSzH8+3cWK/pyKfQjiifpxzwPsbmmxKwnC09ZnPkFwsSMt9+4SmOViXe30e+gzMF0X8YQkDWvg0SsYDNEsc/WEg1gTmsxlxPigRslhC/wOm0R4SIbDv+n+kMqUjVP78RXSCt1hw+h4CDxnl1Bvm9eG0XBlvUai51WS5970/CplbgdYEtO4Yn8bHpFVgL//NVVI9EAC6F7zZmRl0LhsHX6DfiCI9dwInoPw3z8XSB7Wz0L2sctdkoSvBoL+W4VTP6AziEL4Ou2zJsDEjEbow9xlK3210vScAr4fOsjvr5EhH52rCCaziWUkqdTuc+LkQCJtwYZVLtw3HcjLzo7SKwHT6N4QiW8BDv8BO/8SZETk/+WCaogr+r/hCMZ83IlAAAAABJRU5ErkJggg==\\"), auto",
            "display": "block",
            "height": "95%",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "40%",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#323232",
          "border": "3px solid #323232",
          "borderRadius": "3px",
          "bottom": 50,
          "color": "#fff",
          "left": "50%",
          "marginLeft": -100,
          "opacity": 0,
          "position": "absolute",
          "zIndex": 1,
        }
      }
    >
      <img
        className="preview-0"
        src="static/test/page1"
        style={
          Object {
            "display": "inline",
            "width": 200,
          }
        }
      />
      <img
        className="preview-1"
        src="static/test/page2"
        style={
          Object {
            "display": "none",
            "width": 200,
          }
        }
      />
      <img
        className="preview-2"
        src="static/test/page3"
        style={
          Object {
            "display": "none",
            "width": 200,
          }
        }
      />
      <p
        style={
          Object {
            "fontSize": 4,
            "margin": 0,
            "textAlign": "center",
          }
        }
      >
        1 / 3
      </p>
    </div>
    <div
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      style={
        Object {
          "backgroundColor": "#000",
          "height": 10,
          "marginTop": -6,
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#007bb6",
            "height": "100%",
            "width": "34%",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#323232",
          "height": 30,
          "lineHeight": "30px",
          "margin": "auto",
          "overflow": "auto",
          "position": "relative",
          "textAlign": "center",
          "width": "100%",
        }
      }
    >
      <button
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "margin": "0 20px",
            "padding": 0,
          }
        }
      >
        <svg
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 15,
              "width": 15,
            }
          }
          viewBox="0 0 8 8"
        >
          <path
            d="M4 0l-4 3 4 3v-6zm0 3l4 3v-6l-4 3z"
            fill="#fff"
            transform="translate(0 1)"
          />
        </svg>
      </button>
      <span
        style={
          Object {
            "color": "#fff",
          }
        }
      >
        1 / 3
      </span>
      <button
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "margin": "0 20px",
            "padding": 0,
          }
        }
      >
        <svg
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 15,
              "width": 15,
            }
          }
          viewBox="0 0 8 8"
        >
          <path
            d="M0 0v6l4-3-4-3zm4 3v3l4-3-4-3v3z"
            fill="#fff"
            transform="translate(0 1)"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`SlideShow props showFullscreenIcon is true 1`] = `
<div
  className="test"
  style={
    Object {
      "backgroundColor": "transparent",
      "border": 0,
      "fontSize": "100%",
      "fontWeight": "bold",
      "lineHeight": "1px",
      "margin": 0,
      "outline": 0,
      "padding": 0,
      "position": "relative",
      "textDecoration": "none",
      "width": 100,
    }
  }
>
  <div
    className="test-wrapper"
    style={
      Object {
        "margin": "auto",
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "overflow": "auto",
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <img
        className="test-image"
        src="static/test/page1"
        style={
          Object {
            "width": "100%",
          }
        }
      />
      <div
        onClick={[Function]}
        style={
          Object {
            "cursor": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABmJLR0QAAAAAAAD5Q7t/AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH4QYREQ4Xdp3G0wAAAZ9JREFUWMPt1z1rFFEUBuBnhEAaC1FBC1OlVKzFjyqNKY0oqGCddAHzAwS7/AELOwvBwlRpNCAhENMEC7UTFFc0xKRJMEQxXpsTWMad3ZnZ3WyzLxwuc+/ce957PmcYYojqOIYZrGIbn3D3KAk8RcrJAa4dhfLLoXAPd1JKCQ9j7i2yfhOYC2WPUxPwJeZv1/FnHfzNPT+KcR6n+mmBybjp+5QDlmPtZRcXM44F7LQItLzczBE4i++xNl9X+Y8Sig/lQwsrXMV+E4nRKgQWYuMrnEs1gSn8bkP8K663IrAbL4ylLhGWeNOGSONQaXPe7uB43L7Rq6jNssLSkOXTcCnGJ1mWjQ2ixo9jq53varqjSP4rRB9xKYJxtwXBtUF1v4mitOuFBcpgFJux6VY/XVCE/Wg28K0fHxdl8DnGi4OKg6kw2xbO1HTBlZDKLoAXYf6TONFNXerGCqvB/F6HG9/H86j5fzqV4ip4EJs3cKNJ4QVMYxG/SnTRRlEzKpOOrzscfoAVzOI8RnodjCNx+Dp+RgN7h2dh+tPDv5YhquIfvGpAec8aptcAAAAASUVORK5CYII=\\"), auto",
            "display": "block",
            "height": "95%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "40%",
          }
        }
      />
      <div
        onClick={[Function]}
        style={
          Object {
            "cursor": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABmJLR0QAAAAAAAD5Q7t/AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH4QYREQ4zSp4iAgAAAapJREFUWMPt179rFEEUB/DPhUistFCLNGksFSxFURurpBNEMRZpFWwE/wHr+A+IjdgognZpLo0/QKy0UEklERMNQQXxMCDcMRa+lWPZ29xubq+6Lwyz+2bffL9v5s08lgkmqI+rWMcPvMJ1TI2L/Bx6SLn2YBzkLbwNwjsppYRF7ITtVNMCLgfRVuoD7ob9VpXJqu7ZYSzH8+3cWK/pyKfQjiifpxzwPsbmmxKwnC09ZnPkFwsSMt9+4SmOViXe30e+gzMF0X8YQkDWvg0SsYDNEsc/WEg1gTmsxlxPigRslhC/wOm0R4SIbDv+n+kMqUjVP78RXSCt1hw+h4CDxnl1Bvm9eG0XBlvUai51WS5970/CplbgdYEtO4Yn8bHpFVgL//NVVI9EAC6F7zZmRl0LhsHX6DfiCI9dwInoPw3z8XSB7Wz0L2sctdkoSvBoL+W4VTP6AziEL4Ou2zJsDEjEbow9xlK3210vScAr4fOsjvr5EhH52rCCaziWUkqdTuc+LkQCJtwYZVLtw3HcjLzo7SKwHT6N4QiW8BDv8BO/8SZETk/+WCaogr+r/hCMZ83IlAAAAABJRU5ErkJggg==\\"), auto",
            "display": "block",
            "height": "95%",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "40%",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#323232",
          "border": "3px solid #323232",
          "borderRadius": "3px",
          "bottom": 50,
          "color": "#fff",
          "left": "50%",
          "marginLeft": -100,
          "opacity": 0,
          "position": "absolute",
          "zIndex": 1,
        }
      }
    >
      <img
        className="preview-0"
        src="static/test/page1"
        style={
          Object {
            "display": "inline",
            "width": 200,
          }
        }
      />
      <img
        className="preview-1"
        src="static/test/page2"
        style={
          Object {
            "display": "none",
            "width": 200,
          }
        }
      />
      <img
        className="preview-2"
        src="static/test/page3"
        style={
          Object {
            "display": "none",
            "width": 200,
          }
        }
      />
      <p
        style={
          Object {
            "fontSize": 4,
            "margin": 0,
            "textAlign": "center",
          }
        }
      >
        1 / 3
      </p>
    </div>
    <div
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      style={
        Object {
          "backgroundColor": "#000",
          "height": 10,
          "marginTop": -6,
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#007bb6",
            "height": "100%",
            "width": "34%",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#323232",
          "height": 30,
          "lineHeight": "30px",
          "margin": "auto",
          "overflow": "auto",
          "position": "relative",
          "textAlign": "center",
          "width": "100%",
        }
      }
    >
      <button
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "margin": "0 20px",
            "padding": 0,
          }
        }
      >
        <svg
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 15,
              "width": 15,
            }
          }
          viewBox="0 0 8 8"
        >
          <path
            d="M4 0l-4 3 4 3v-6zm0 3l4 3v-6l-4 3z"
            fill="#fff"
            transform="translate(0 1)"
          />
        </svg>
      </button>
      <span
        style={
          Object {
            "color": "#fff",
          }
        }
      >
        1 / 3
      </span>
      <button
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "margin": "0 20px",
            "padding": 0,
          }
        }
      >
        <svg
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 15,
              "width": 15,
            }
          }
          viewBox="0 0 8 8"
        >
          <path
            d="M0 0v6l4-3-4-3zm4 3v3l4-3-4-3v3z"
            fill="#fff"
            transform="translate(0 1)"
          />
        </svg>
      </button>
      <div>
        <button
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "borderStyle": "none",
              "position": "absolute",
              "right": 10,
              "top": 5,
            }
          }
        >
          <svg
            height="15"
            id="fullscreen"
            viewBox="0 0 438.529 438.529"
            width="15"
          >
            <g
              fill="#fff"
            >
              <path
                d="M180.156,225.828c-1.903-1.902-4.093-2.854-6.567-2.854c-2.475,0-4.665,0.951-6.567,2.854l-94.787,94.787l-41.112-41.117 c-3.617-3.61-7.895-5.421-12.847-5.421c-4.952,0-9.235,1.811-12.851,5.421c-3.617,3.621-5.424,7.905-5.424,12.854v127.907 c0,4.948,1.807,9.229,5.424,12.847c3.619,3.613,7.902,5.424,12.851,5.424h127.906c4.949,0,9.23-1.811,12.847-5.424 c3.615-3.617,5.424-7.898,5.424-12.847s-1.809-9.233-5.424-12.854l-41.112-41.104l94.787-94.793 c1.902-1.903,2.853-4.086,2.853-6.564c0-2.478-0.953-4.66-2.853-6.57L180.156,225.828z"
              />
              <path
                d="M433.11,5.424C429.496,1.807,425.212,0,420.263,0H292.356c-4.948,0-9.227,1.807-12.847,5.424 c-3.614,3.615-5.421,7.898-5.421,12.847s1.807,9.233,5.421,12.847l41.106,41.112l-94.786,94.787 c-1.901,1.906-2.854,4.093-2.854,6.567s0.953,4.665,2.854,6.567l32.552,32.548c1.902,1.903,4.086,2.853,6.563,2.853 s4.661-0.95,6.563-2.853l94.794-94.787l41.104,41.109c3.62,3.616,7.905,5.428,12.854,5.428s9.229-1.812,12.847-5.428 c3.614-3.614,5.421-7.898,5.421-12.847V18.268C438.53,13.315,436.734,9.04,433.11,5.424z"
              />
            </g>
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`SlideShow props style 1`] = `
<div
  className="test"
  style={
    Object {
      "backgroundColor": "transparent",
      "border": 0,
      "fontSize": "100%",
      "lineHeight": "1px",
      "margin": 0,
      "outline": 0,
      "padding": 0,
      "position": "relative",
      "textDecoration": "none",
      "width": 100,
    }
  }
>
  <div
    className="test-wrapper"
    style={
      Object {
        "margin": "auto",
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "overflow": "auto",
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <img
        className="test-image"
        src="static/test/page1"
        style={
          Object {
            "width": "100%",
          }
        }
      />
      <div
        onClick={[Function]}
        style={
          Object {
            "cursor": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABmJLR0QAAAAAAAD5Q7t/AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH4QYREQ4Xdp3G0wAAAZ9JREFUWMPt1z1rFFEUBuBnhEAaC1FBC1OlVKzFjyqNKY0oqGCddAHzAwS7/AELOwvBwlRpNCAhENMEC7UTFFc0xKRJMEQxXpsTWMad3ZnZ3WyzLxwuc+/ce957PmcYYojqOIYZrGIbn3D3KAk8RcrJAa4dhfLLoXAPd1JKCQ9j7i2yfhOYC2WPUxPwJeZv1/FnHfzNPT+KcR6n+mmBybjp+5QDlmPtZRcXM44F7LQItLzczBE4i++xNl9X+Y8Sig/lQwsrXMV+E4nRKgQWYuMrnEs1gSn8bkP8K663IrAbL4ylLhGWeNOGSONQaXPe7uB43L7Rq6jNssLSkOXTcCnGJ1mWjQ2ixo9jq53varqjSP4rRB9xKYJxtwXBtUF1v4mitOuFBcpgFJux6VY/XVCE/Wg28K0fHxdl8DnGi4OKg6kw2xbO1HTBlZDKLoAXYf6TONFNXerGCqvB/F6HG9/H86j5fzqV4ip4EJs3cKNJ4QVMYxG/SnTRRlEzKpOOrzscfoAVzOI8RnodjCNx+Dp+RgN7h2dh+tPDv5YhquIfvGpAec8aptcAAAAASUVORK5CYII=\\"), auto",
            "display": "block",
            "height": "95%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "40%",
          }
        }
      />
      <div
        onClick={[Function]}
        style={
          Object {
            "cursor": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABmJLR0QAAAAAAAD5Q7t/AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH4QYREQ4zSp4iAgAAAapJREFUWMPt179rFEEUB/DPhUistFCLNGksFSxFURurpBNEMRZpFWwE/wHr+A+IjdgognZpLo0/QKy0UEklERMNQQXxMCDcMRa+lWPZ29xubq+6Lwyz+2bffL9v5s08lgkmqI+rWMcPvMJ1TI2L/Bx6SLn2YBzkLbwNwjsppYRF7ITtVNMCLgfRVuoD7ob9VpXJqu7ZYSzH8+3cWK/pyKfQjiifpxzwPsbmmxKwnC09ZnPkFwsSMt9+4SmOViXe30e+gzMF0X8YQkDWvg0SsYDNEsc/WEg1gTmsxlxPigRslhC/wOm0R4SIbDv+n+kMqUjVP78RXSCt1hw+h4CDxnl1Bvm9eG0XBlvUai51WS5970/CplbgdYEtO4Yn8bHpFVgL//NVVI9EAC6F7zZmRl0LhsHX6DfiCI9dwInoPw3z8XSB7Wz0L2sctdkoSvBoL+W4VTP6AziEL4Ou2zJsDEjEbow9xlK3210vScAr4fOsjvr5EhH52rCCaziWUkqdTuc+LkQCJtwYZVLtw3HcjLzo7SKwHT6N4QiW8BDv8BO/8SZETk/+WCaogr+r/hCMZ83IlAAAAABJRU5ErkJggg==\\"), auto",
            "display": "block",
            "height": "95%",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "40%",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#323232",
          "border": "3px solid #323232",
          "borderRadius": "3px",
          "bottom": 50,
          "color": "#fff",
          "left": "50%",
          "marginLeft": -100,
          "opacity": 0,
          "position": "absolute",
          "zIndex": 1,
        }
      }
    >
      <img
        className="preview-0"
        src="static/test/page1"
        style={
          Object {
            "display": "inline",
            "width": 200,
          }
        }
      />
      <img
        className="preview-1"
        src="static/test/page2"
        style={
          Object {
            "display": "none",
            "width": 200,
          }
        }
      />
      <img
        className="preview-2"
        src="static/test/page3"
        style={
          Object {
            "display": "none",
            "width": 200,
          }
        }
      />
      <p
        style={
          Object {
            "fontSize": 4,
            "margin": 0,
            "textAlign": "center",
          }
        }
      >
        1 / 3
      </p>
    </div>
    <div
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      style={
        Object {
          "backgroundColor": "#000",
          "height": 10,
          "marginTop": -6,
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#007bb6",
            "height": "100%",
            "width": "34%",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#323232",
          "height": 30,
          "lineHeight": "30px",
          "margin": "auto",
          "overflow": "auto",
          "position": "relative",
          "textAlign": "center",
          "width": "100%",
        }
      }
    >
      <button
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "margin": "0 20px",
            "padding": 0,
          }
        }
      >
        <svg
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 15,
              "width": 15,
            }
          }
          viewBox="0 0 8 8"
        >
          <path
            d="M4 0l-4 3 4 3v-6zm0 3l4 3v-6l-4 3z"
            fill="#fff"
            transform="translate(0 1)"
          />
        </svg>
      </button>
      <span
        style={
          Object {
            "color": "#fff",
          }
        }
      >
        1 / 3
      </span>
      <button
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "margin": "0 20px",
            "padding": 0,
          }
        }
      >
        <svg
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 15,
              "width": 15,
            }
          }
          viewBox="0 0 8 8"
        >
          <path
            d="M0 0v6l4-3-4-3zm4 3v3l4-3-4-3v3z"
            fill="#fff"
            transform="translate(0 1)"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
